# audiohub

./: .dockerignore  .env-docker  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.recommender-server  README.md  build.rs  docker-compose.yaml  dump.sql  dump_all.sql  example.env  gitlab-ci.yml  kubernetes.sh
.sqlx/: query-0f10e09afe05d3dabbed8b09f7a67a2d6562a5d7440c4f900d22bdd5cadc239e.json  query-1922a93aee02a68e987f2cad638c8941b1e49e132dd2e9ce742b69b343858b67.json  query-1e40d75e84df110cb6d0d000d5d10eb1750d16cb11577a78880d8849252b9f11.json  query-1eb6707850d3930377158f67a74537e6c8c0e870c827d58cdbd718f583e69011.json  query-21263047e3bbe9830bd283d3d939cd218def738c87da6c864207a8574c9d0c9b.json  query-214e7bb3b0b65b9a45bf6b0a632d1a12f9df48467009af7bd0306e23d86c9673.json  query-251518ce578246ffde226845ba71fc92bbe27b002e3c337ebccf4b49900bbf5a.json  query-2dd488692094af5b3ca97b9518a0c7994e176e1aa04536fdb3abf69a903aa898.json  query-35d9a17cd7cc89f37e136247547117cca73375abd93c09acb847fcac759bfdb7.json  query-3b833edd86b7b91af634ce0d0d521f3fde183ef5ce7444db5101e52825c2e7dd.json  query-41e620b6dc707eaaa1f396c1a99b73c00d35b4563b399c87d1ee8aa4559e0cea.json  query-44af9ddaf039e35f01baa5bb1009b446783a66c1f8921515a346a1ee9afd2409.json  query-4dbf6581c20480360d5576ad8c76a773da00af987afba80aaec74d2c2be7f16b.json  query-54b7bc9ea6474cb26125af669b53b372bebb4fe53f32c0b92039147f63173c6d.json  query-5a548a66059e969b519ec9e0e21320b471b4e38e53da26f0cf036374fc979923.json  query-6666c4dbcebafece53c250efdb9ceb1e6060fbd2dd691c5c35267167aec22c0a.json  query-6897e642c6af18a7e7cf4fd00dc7ac8cf28b82fba3166c9c5a6c3ff493532fbc.json  query-6c7e2b7eedc5dea38a9bdde27f3582bfcb5c847564afe8b821b43ba56b1a1ec2.json  query-6e86b415213799d34d4e337336dbb24994696490b6ed42a66d7d67648f5a39d0.json  query-6f5962f3c61bdf6c236a29d3d30fff71d3d76e3515f82c15c9f3b58d88fc8166.json  query-7188909408791a2e99db12336b34219064f83b3eeeae3f1bc56083deeaad7331.json  query-744c426ef4bb3a78f5586545952acf2e74ed3491e655d0f9fd487f9b470a729c.json  query-74ae8e56bb091ebb45d488b26332888ffd19f68a77514ae72ecbda5f7e441c8f.json  query-7626170f3f33c6b597f59af464cc8c506c2a20e2326d647b41b435ec050a52fd.json  query-787f75e5b28b26d9d4d77b3ddca1ebca65a5920435c0b3e2b1d91b9b80cd1c4f.json  query-7b5b0a82feb9549acc9ab0ef189200de5a4db3c31b81b865ffd565bf5122033b.json  (+32 more)
media/: .gitignore
migrations/: 20231119114802_init.sql  (+25 more)
(+191 files in other folders)
