[package]
name = "audiobooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
async-trait = "0.1.74"
chrono = "0.4.31"
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = ["chrono", "runtime-tokio-native-tls", "postgres", "bigdecimal"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4"] }
