[package]
name = "audiobooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
anyhow = { version = "1.0.75", features = [] }
askama = "0.12.1"
async-trait = "0.1.74"
chrono = "0.4.31"
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["chrono", "runtime-tokio-native-tls", "postgres", "bigdecimal"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4"] }
